# et_fpm

./: .env.example  .gitignore  README.md  pyproject.toml
ci/: test.yml
config/: config.yml  weights_liq_inv.yml
et_fpm/: __init__.py  assets.py  utils.py
et_fpm/analytics/: factor.py  regime.py  returns.py  sharpe.py  supply_chain.py  volatility.py
et_fpm/dashboard/: app.py  components.py
et_fpm/db/: init_db.py  models.py
et_fpm/ingest/: fetch_fundamentals.py  fetch_prices.py  scheduler.py
et_fpm/reports/: weekly_pdf.py
et_fpm/weights/: liq_inv.py  sharpe_pos.py  utils.py
tests/: test_dashboard.py  test_ingest.py  test_regime.py  test_volatility.py
